--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,7 +1,42 @@
 /* 
     General Styles used on every website (Don't Repeat Yourself)
 */
-body{
-    background-color:#6A0DAD;
-    background-image: url("https://media.istockphoto.com/id/1356164906/vector/geometric-seamless-pattern-in-80s-style-abstract-geometric-background-design-for-brochures.jpg?s=612x612&w=0&k=20&c=jnx_I1eag5ZQAsUsdgZQ0rUs-dG_ViCPufFKY103EKw=");
+body {
+  background-image: url("https://media.istockphoto.com/id/1356164906/vector/geometric-seamless-pattern-in-80s-style-abstract-geometric-background-design-for-brochures.jpg?s=612x612&w=0&k=20&c=jnx_I1eag5ZQAsUsdgZQ0rUs-dG_ViCPufFKY103EKw=");
+}
+.container {
+  background-color: #a985fc;
+  width: 600px;
+  height: 400px;
+  border-radius: 20px;
+  box-shadow: 30px 30px 50px rgb(20, 4, 78);
+  margin-top: 40px;
+  margin-bottom: 100px;
+}
+.btn {
+  visibility: hidden;
+  float: right;
+}
+li:hover * {
+  visibility: visible;
+}
+.title {
+  font-family: "VT323", monospace;
+  font-size: 45px;
+  text-align: center;
+}
+.footer {
+  font-family: "VT323", monospace;
+  font-size: 20px;
+}
+.task-list {
+  max-height: 250px;
+  border-radius: 20px;
+  margin-top: 20px;
+  justify-content: space-between;
+  font-family: "VT323", monospace;
+  font-size: 25px;
+}
+.task-list li {
+  margin-bottom: 5px;
 }
