--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -36,6 +36,7 @@ li:hover * {
   justify-content: space-between;
   font-family: "VT323", monospace;
   font-size: 25px;
+  overflow-y: scroll;
 }
 .task-list li {
   margin-bottom: 5px;
